# EdgeGuiding

./: .gitignore  Detection.h  DynamicLibLoader.cpp  DynamicLibLoader.h  README.md  Resource.qrc  alg_detection.h  alg_dynamicLibLoader.cpp  alg_performAlgorithms.cpp  alg_performAlgorithms.h  autoclosedialog.h  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  define.h  dlg_calibration.cpp  dlg_calibration.h  dlg_calibration.ui  dlg_settings.cpp  dlg_settings.h  dlg_settings.ui  dlg_unlock.cpp  encrypt.cpp  encrypt.h  longPressButton.cpp  longPressButton.h  m_encrypt.cpp  m_loggings.h  m_uvcCapture.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myDemo.pro  performalgorithms.cpp  performalgorithms.h  peripheralOperator.cpp  peripheralOperator.h  settingsdialog.cpp  settingsdialog.h  (+6 more)
Algorithms/: AlgorithmBlock.cpp  AlgorithmLine.cpp  Detection.h  GenerateDLL.bat  alg_detection.h
Algorithms/Demo/: AlgorithmBlock.cpp  AlgorithmLine.cpp
Algorithms/TestCode/: main.cpp
EdgeGuiding/: Resource.qrc  alg_detection.h  alg_dynamicLibLoader.h  alg_performAlgorithms.cpp  alg_performAlgorithms.h  autolockwindow.h  dlg_unlock.ui  m_encrypt.h  m_peripheralOperator.cpp  m_peripheralOperator.h  m_uvcCapture.h  mainwindow.h  mainwindow.ui
EdgeGuiding/.file/: codeDemo  myDemo  文件说明.txt  结构说明.pptx
EdgeGuiding/Algorithms/: AlgorithmBlock.cpp  CMakeLists.txt  GenerateDLL.bat  alg_detection.h  commands.txt
EdgeGuiding/Algorithms/Demo/: Detection.h
EdgeGuiding/Algorithms/TestCode/: ColorBlockTracker.cpp  Detection.h  LineTracker.cpp
